applications/cloudlena/10_cloudlena_namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
  labels:
    istio.io/dataplane-mode: ambient
    kubernetes.io/metadata.name: ${NAMESPACE}
    monitoring: enabled
spec:
  finalizers:
    - kubernetes
---
