applications/cloudlena/cloudlena_namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/dataplane-mode: ambient
    kubernetes.io/metadata.name: cloudlena
    monitoring: enabled
    name: cloudlena
  name: cloudlena
spec:
  finalizers:
  - kubernetes
---
