applications/cloudlena/rook-ceph.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
  labels:
    kubernetes.io/metadata.name: rook-ceph
    app.kubernetes.io/name: rook-ceph
spec:
  finalizers:
    - kubernetes
