applications/cloudlena/30_cloudlena_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-browser
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s3-browser
  template:
    metadata:
      labels:
        app: s3-browser
    spec:
      serviceAccountName: cloudlena-sa
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 30

      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: s3manager
          image: cloudlena/s3manager:v0.7.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: openbao
              readOnly: true
              mountPath: "/mnt/openbao"
            - name: tmp
              mountPath: /tmp
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

      restartPolicy: Always
      dnsPolicy: ClusterFirst

      volumes:
        - name: openbao
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: cloudlena
        - name: tmp
          emptyDir: {}
---
