applications/cloudlena/cloudlena_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-browser
  namespace: cloudlena
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s3-browser
  template:
    metadata:
      labels:
        app: s3-browser
    spec:
      serviceAccountName: cloudlena-sa
      # Prevents containers from accessing the underlying node's credentials
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 0

      securityContext:
        # Runs the entire pod as a non-root user
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        # Restricts pod communication using a strict seccomp profile
        seccompProfile:
          type: RuntimeDefault

      containers:
      - name: s3manager
        image: cloudlena/s3manager:v0.7.0
        ports:
        - containerPort: 8080
        securityContext:
          # Prevents the container process from gaining more privileges than its parent
          allowPrivilegeEscalation: false
          # Makes the root filesystem read-only to prevent unauthorized file modifications
          readOnlyRootFilesystem: true
          # Drops all default Linux capabilities to minimize the attack surface
          capabilities:
            drop:
            - ALL

      restartPolicy: Always
      dnsPolicy: ClusterFirst

      volumes:
        # Mount the secret via the CSI driver
        - name: openbao
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: cloudlena
---
