applications/cloudlena/cloudlena_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: s3-browser-service
  namespace: rook-ceph
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: s3-browser
---
