applications/cloudlena/60_cloudlena_virtual_service.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: cloudlena-mutual
  namespace: ${NAMESPACE}
spec:
  hosts:
    - "cloudlena.${K8S_ENVIRONMENT}.slainte.at"
  gateways:
    - istio-gateways/slainte-at
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: s3-browser-service.${NAMESPACE}.svc.cluster.local
            port:
              number: 8080
---
